fix(pulse-plugin): removed shift max value, added no-chart image (#1559)

--- a/src/app/pulse/charts/chart-area.component.scss
+++ b/src/app/pulse/charts/chart-area.component.scss
@@ -51,7 +51,6 @@
     transform: translate(-50%, -50%);
   }
   img {
-    width: 100%;
     z-index: -1;
   }
 }
